2005-09-05  Erik Hjortsberg  <erik@katastrof.nu>

	* TODO: updated items

2005-09-01  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/AvatarController.* : make sure all values are initiialized to the correct values (in most cases 0) in the constructor

2005-09-01  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/Model.cpp: since Ogre 1.0.4 the issue with attached entities not being scaled correctly has been fixed, so thus we need to deal with this in Model
	* configure.ac: require Ogre 1.0.4

2005-09-01  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/InspectWidget.cpp: Check that the predicted velocity is valid before showing it, since at least with the current Eris it will be invalid if the entity is not moving.

2005-07-26  Erik Hjortsberg  <erik@katastrof.nu>

	* Makefile.am: include new .imageset files
	* src/components/ogre/widgets/IconBase.* don't get images by file name, get them from the imageset instead
	* src/components/ogre/widgets/StatuIconBar.* use the new functionality in IconBase


2005-07-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/cegui/datafiles/imagesets/iconset_mason.imageset, src/components/ogre/cegui/datafiles/imagesets/iconset_standard.imageset:
		* instead of using individual files for the icons we'll use CEGUI's imageset functionality. This is good in so many ways, amongst them that we'll have to use imagesizes n^2 for our images since most GFX can't handle other sizes.
		* separated the images into two different files. The standard icons are those that presumely are game neutral. I put the non-game neutral icons in iconset_mason, even though there probably won't be combat or magic in mason.

2005-07-25  Erik Hjortsberg  <erik@katastrof.nu>
